# GoldSource-Map-Renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json~  README.md  README.org  deploy_macos.sh  launch.json  vcpkg.json
assets/: config.ini
assets/shaders/: bsp.frag  bsp.vert  shader.frag  shader.vert  testrenderer.vert
docs/: lightmaps.org
src/: WADTexture.cpp  WADTexture.h  assetloader.cpp  assetloader.h  bsp.cpp  bsp.h  bsprenderbatch.cpp  bsprenderbatch.h  bsprenderer.cpp  bsprenderer.h  camera.cpp  camera.h  configuration.cpp  configuration.h  lightmaptexture.cpp  lightmaptexture.h  main.cpp  pngtexture.cpp  pngtexture.h  renderer.cpp  renderer.h  shader.cpp  shader.h  testrenderer.cpp  testrenderer.h  texture.cpp  texture.h  wad.cpp  wad.h  wadtexture.cpp  wadtexture.cpp~  wadtexture.h  windowcontext.h  worldgeometry.cpp  worldgeometry.h
